--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,6 +132,10 @@ body{
     color: #555;
     font-size: 18px;
 }
+.end .end--btn {
+    color: #555;
+    font-size: 18px;
+}
 .bubble{
     display: flex;
     justify-content: center;
@@ -143,4 +147,11 @@ body{
     border: 1px solid #000;
     font-size: 30px;
     font-weight: 600;
+}
+
+.gameEnded{
+    display: flex;
+    background-color: #000;
+    color: #fff;
+    font-size: 48px;
 }
