--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,6 +151,9 @@ body{
 
 .gameEnded{
     display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     background-color: #000;
     color: #fff;
     font-size: 48px;
