--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,9 +152,25 @@ body{
 .gameEnded{
     display: flex;
     width: 100%;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #000;
     color: #fff;
     font-size: 48px;
+}
+
+.analysis{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    flex: 1 0 auto;
+}
+
+.analysis h3{
+    font-size: 40px;
+}
+.analysis p {
+    font-size: 26px;
 }
