--- a/static/css/style.css
+++ b/static/css/style.css
@@ -164,7 +164,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex: 1 0 auto;
 }
 
@@ -173,4 +173,5 @@ body{
 }
 .analysis p {
     font-size: 26px;
+    padding: 12px 0;
 }
