--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,8 +170,9 @@ body{
 
 .analysis h3{
     font-size: 40px;
+    border-bottom: 3px solid tomato;
 }
-.analysis p {
+.analysis ul {
     font-size: 26px;
-    padding: 12px 0;
+    padding: 8px 0;
 }
